Remove dead code and expand test coverage across exporter classes
  Twelve new physics-validation tests were added to
  PhysicsValidation_Bartz_UT covering gas type variation (LOX/LH2
  vs LOX/RP-1 vs LOX/CH4), throat radius scaling (h ∝ Dt^-0.2),
  chamber temperature scaling (h ∝ Tc^-0.3), and warm coolant temperature invariants. Five new tests were added to OpenFOAMExporter_UT exercising every previously untested configuration setter: setAxialCells, setRadialCells, setWedgeAngleDeg, setRadialGrading, and setTurbulenceIntensity.

  Dead code was removed throughout the exporter layer. The unused params parameter was dropped from writeBlockMeshDict and the  unused ta variable from writeTemperatureField in OpenFOAMExporter.  The name parameter of emptyPatch and the layer parameter of writeCharacteristicPolyline were hardcoded since every call site passed the same value. In CFDMeshExporter the circumferentialCells field (no 3-D format exists to consume it) and firstLayerThickness field (stored but never read; only expansionRatio was used) were removed; setBoundaryLayerParams was renamed setExpansionRatio to reflect what it actually configures. Trailing post-increments on pointId, lineId, pid, and lid at the end of each Gmsh entity block were removed, and the unused rTip local variable and redundant rOuter alias for rt were eliminated.
  DXF export methods now use named layers WALL and AXIS instead of the default layer 0, matching the pattern already established by exportAerospikeContour. The unused planarNet helper in PhysicsValidation_MOC_UT was removed, and the two axisymmetric branch tests in CharacteristicNet_UT were refactored to use the existing makePoint helper rather than duplicating the isentropic property calculations inline.